# whiteprints-template-context

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-versions  .ruff.toml  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  README.md  REUSE.toml  SECURITY.md  bandit.yaml  codecov.yml  hatch.toml  hatch_build.py  justfile  pyproject.toml  pyrightconfig.json.license  pytest.ini  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md.license  dependabot.yml  release-drafter.yml  renovate.json5  renovate.json5.license
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto_merge.yml  publish_ghcr.yml  publish_pypi.yml  release_drafter.yml  semantic_pull_request.yml  tests.yml  upload_artifacts.yml
container/: Containerfile.alpine  Containerfile.containerignore  Containerfile.debian
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  SECURITY.md  artifacts_verification.md  conf.py  contributing_index.md  guide.md  index.md  licensing.md  licensing_faq.md  licensing_index.md  project.md  quickstart.md
docs/_autoapi_templates/: index.rst
docs/_autoapi_templates/python/: attribute.rst  class.rst  data.rst  exception.rst  function.rst  method.rst  module.rst  package.rst  property.rst
docs/_static/: banner.svg.license
scripts/: build_container_image.py  release.py
src/whiteprints_template_context/: __init__.py  context.py  filters.py  loc.py  package_metadata.py  py.typed
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  jinja2_environment.py
tests/test_whiteprints_template_context/: __init__.py  test_context.py  test_filters.py  test_loc.py  test_package_metadata.py
