# SPDX-FileCopyrightText: © 2024 The "Whiteprints template context" contributors <whiteprints@pm.me>
#
# SPDX-License-Identifier: MIT

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme>=24.1",
    "hatch-vcs>=0.4",
    "hatchling>=1.27",
]

[project]
name = "whiteprints-template-context"
description = "Interpolate variables and set Copier Jinja context"
keywords = [
    "Python",
]
license = "MIT"
license-files.paths = [
    "LICENSES/CC-BY-NC-SA-4.0.txt",
    "LICENSES/MIT.txt",
]
maintainers = [
    { name = "Romain Brault", email = "" },
]
authors = [
    { name = "Romain Brault", email = "" },
]
requires-python = ">=3.9,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "copier-templates-extensions>=0.3",
    "jinja2-time>=0.2",
    "license-expression>=30.3.1",
    "typing-extensions>=4.12.2; python_full_version<'3.12'",
]

urls.changelog = "https://github.com/whiteprints/whiteprints-template-context/releases"
urls.discussions = "https://github.com/whiteprints/whiteprints-template-context/discussions"
urls.documentation = "https://github.com/whiteprints/whiteprints-template-context"
urls.download = "https://github.com/whiteprints/whiteprints-template-context/releases"
urls.homepage = "https://github.com/whiteprints/whiteprints-template-context"
urls.integration = "https://github.com/whiteprints/whiteprints-template-context/actions"
urls.issues = "https://github.com/whiteprints/whiteprints-template-context/issues"
urls.pypi = "https://pypi.org/project/whiteprints-template-context"
urls.repository = "https://github.com/whiteprints/whiteprints-template-context"

[dependency-groups]
dev = [
    { include-group = "audit-maintainability" },
    { include-group = "audit-vulnerabilities" },
    { include-group = "check-exceptions" },
    { include-group = "check-maintainability" },
    { include-group = "coverage" },
    { include-group = "editor" },
    { include-group = "lint" },
    { include-group = "localization" },
    { include-group = "profile" },
    { include-group = "serve-documentation" },
    { include-group = "tests" },
]

tests = [
    "beartype>=0.18.5",
    "hypothesis>=6.110.1",
    "pytest>=8.3.2",
    "pytest-cov>=5",
    "pytest-html>=4.1.1",
    "pytest-md-report>=0.6.2",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6.1",
    "xdoctest>=1.2",
]
editor = [
    "pynvim>=0.4.3",
]
profile = [
    "scalene>=1.5.49",
]
lint = [
    "pylint>=3.2.6",
    { include-group = "tests" },
]
check-types = [
    "pyright>=1.1.386",
    { include-group = "tests" },
]
coverage = [
    "coverage>=7.6.1",
]
audit-vulnerabilities = [
    "pip-audit>=2.7.3",
]
audit-maintainability = [
    "radon>=6.0.1",
]
check-exceptions = [
    "tryceratops>=2.4.0",
]
check-maintainability = [
    "xenon>=0.9.3",
]
check-vulnerabilities = [
    "bandit>=1.7.10",
]
build-documentation = [
    "myst-parser[linkify]>=3.0.1",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx>=7.4.0",
    "sphinx-autoapi>=3.3.3",
    "sphinx-click>=6",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-napoleon>=0.7.0",
    "sphinxcontrib-spelling>=8.0.0",
]
serve-documentation = [
    "sphinx-autobuild>=2024.10.3",
    { include-group = "build-documentation" },
]
localization = [
    "babel>=2.16",
]

[tool.pyproject-fmt]
column_width = 79
indent = 4
keep_full_version = true
max_supported_python = "3.13"

[tool.uv]
required-version = ">=0.5.16"
managed = true
cache-keys = [
    { git = { commit = true, tags = true } },
    { file = "pyproject.toml" },
    { file = "hatch.toml" },
    { file = "hatch_build.py" },
]
